force-app/main/default/objects/Asset/fields/Contract_Value_c__c.field-meta.xml
<CustomField>
    <fullName>Contract_Value_c__c</fullName>
    <label>Contract_Value__c</label>
    <precision>8</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>