force-app/main/default/objects/Asset/fields/Deadline_Date_c__c.field-meta.xml
<CustomField>
    <fullName>Deadline_Date_c__c</fullName>
    <label>Deadline_Date__c</label>
    <required>true</required>
    <type>Date</type>
</CustomField>