force-app/main/default/objects/Asset/fields/Maintenance_Agreement_c__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Agreement_c__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Maintenance_Agreement__c</label>
    <type>Checkbox</type>
</CustomField>