force-app/main/default/objects/Asset/fields/Premium_Tier_c__c.field-meta.xml
<CustomField>
    <fullName>Premium_Tier_c__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Premium_Tier__c</label>
    <type>Checkbox</type>
</CustomField>