force-app/main/default/objects/Asset/fields/Solar_Panel_Model__c.field-meta.xml
<CustomField>
    <fullName>Solar_Panel_Model__c</fullName>
    <label>Solar Panel Model</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N-Type TOPCon &amp; Premium Models</fullName>
            </value>
            <value>
                <fullName>Monocrystalline &amp; Mono-PERC Models</fullName>
            </value>
            <value>
                <fullName>Polycrystalline Models (Budget Tier)</fullName>
            </value>
            <value>
                <fullName>Maxeon 6 AC (440W N-Type)</fullName>
            </value>
            <value>
                <fullName>REC Alpha Pure-R 430W (Heterojunction)</fullName>
            </value>
            <value>
                <fullName>Q Cells Q. TRON BLK M-G2+ 440W (TOPCon)</fullName>
            </value>
            <value>
                <fullName>JinkoSolar Tiger Neo N-type 575W</fullName>
            </value>
            <value>
                <fullName>Canadian Solar HiKu7 Mono PERC 650W</fullName>
            </value>
            <value>
                <fullName>LONGi Hi-MO 6 Scientist 445W Trina Solar Vertex S+ 435W (Dual-Glass)</fullName>
            </value>
            <value>
                <fullName>JA Solar DeepBlue 3.0 Mono 550W</fullName>
            </value>
            <value>
                <fullName>Panasonic EverVolt H Series 410W</fullName>
            </value>
            <value>
                <fullName>Waaree Bi.N-08 Bifacial 580W</fullName>
            </value>
            <value>
                <fullName>Loom Solar SHARK 440W Mono-PERC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>