force-app/main/default/objects/Asset/fields/Total_Panel_Count_c__c.field-meta.xml
<CustomField>
    <fullName>Total_Panel_Count_c__c</fullName>
    <label>Total_Panel_Count__c</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>